# BI-Blaze

./: .gitignore  IMPLEMENTATION_PLAN.md  Makefile  PHASE3_QUICK_START.md  QB_MCP_MANUAL_DEPLOYMENT.md  QUICK_START.md  README.md  deploy_qb_mcp.sh  docker-compose.dev.yml
backend/: .env.example  check_invoice_data.py  check_sync.py  check_zoho.py  clear_and_sync.py  clear_token.py  debug_zoho_endpoint.py  direct_sync.py  get_refresh_token.py  pyproject.toml  requirements.txt  run_sync.py  save_token.py  setup_demo.py  sync_now.py  test_advanced_reports.py  test_api.py  test_api_direct.py  test_endpoints.py  test_reports.py  test_sync.py  test_token_refresh.py  test_zoho.py  test_zoho_direct.py  test_zoho_token.py  verify_token.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: auth.py  dashboard.py  details.py  query.py  quickbooks_auth.py  reports.py
backend/app/db/: database.py
backend/app/jobs/: scheduler.py
backend/app/models/: database.py  schemas.py
backend/app/services/: dashboard_service.py  llm_service.py  mock_data.py  qb_mcp_client.py  qb_query_wrapper.py  quickbooks_mcp.py  quickbooks_oauth.py  quickbooks_oauth_v2.py  quickbooks_sdk.py  quickbooks_sync.py  reports.py  zoho_api_client.py  zoho_sync.py
backend/app/utils/: logger.py
backend/docs/: MCP_DEPLOYMENT.md  QB_MCP_INTEGRATION.md
docs/: SETUP.md
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx
frontend/app/chat/: page.tsx
frontend/app/reports/: page.tsx
frontend/hooks/: useDashboard.ts
frontend/utils/: formatters.ts
(+22 files in other folders)
